# iron-ore-agent

./: .gitignore  README.md  agent复刻学习指南.html  agent复刻架构图.md  agent复刻进度.md  knowledge_be复刻学习指南.html  knowledge_be复刻思考与认知.md  knowledge_be接入方案.md  完整agent服务集成方案.md  项目执行计划.md  项目运行与逻辑指南.html  项目面试拆解指南.md
07_model_training/: 任务流程.md
agent_service/: main.py  pyproject.toml  test_llm.py
agent_service/src/: patches.py
agent_service/src/agents/: __init__.py  agents.py  mcps.py  tool_injection.py  tool_interceptor.py  utils.py
agent_service/src/common/: aredis.py  logger.py
agent_service/src/config/: __init__.py  agents.py  configuration.py  loader.py
agent_service/src/graph/: utils.py
agent_service/src/graph/deepresearch/: builder.py  checkpoint.py  nodes.py  planner_model.py  types.py
agent_service/src/graph/scenarios/: builder.py  nodes.py  types.py
agent_service/src/llms/: llm.py
agent_service/src/prompts/: __init__.py  template.py
agent_service/src/prompts/common/: summary.md
agent_service/src/prompts/deepresearch/default/: analyst.md  coordinator.md  coordinator_fast.md  planner.md  reporter.md  researcher.md  simple_researcher.md  summary.md  tool_executor.md
agent_service/src/prompts/deepresearch/demand/: analyst.md  coordinator.md  coordinator_fast.md  planner.md  reporter.md  researcher.md  tool_executor.md
agent_service/src/prompts/deepresearch/price/: analyst.md  coordinator.md  coordinator_fast.md  planner.md  reporter.md  researcher.md  simple_researcher.md  summary.md  tool_executor.md
agent_service/src/prompts/deepresearch/report/: analyst.md  coordinator.md  planner.md  reporter.md  researcher.md
agent_service/src/prompts/deepresearch/sd_balance/: analyst.md  coordinator.md  coordinator_fast.md  planner.md  reporter.md  researcher.md  summary.md  tool_executor.md
agent_service/src/prompts/scenarios/: init.md  predict_report.md
agent_service/src/server/: __init__.py  analysis.py  cancel.py  deepresearch.py  scenarios.py  schemas.py  suggested.py  utils.py
agent_service/src/utils/: context_manager.py  json_utils.py  log_sanitizer.py
knowledge_service/: README.md  main.py  pyproject.toml  复刻笔记.md
knowledge_service/data/corpus/: [学习笔记]特征工程-标的滞后特征.html  agent复刻思考与认知.md  feature_engineering_summary.html  report_20260707_140927.md  report_20260709_102921.md  report_20260709_104918.md  weekly_aggregation_summary.html
knowledge_service/scripts/: eval.py  ingest.py  smoke_test_models.py  test_search.py
knowledge_service/src/: config.py  logger.py
knowledge_service/src/api/: routes.py  schemas.py
knowledge_service/src/pipeline/: __init__.py  embedder.py  ingest.py  loader.py  reranker.py  splitter.py  store.py
knowledge_service/src/retrieval/: bm25.py  hybrid.py  search.py  vector.py
mcp_server/: pyproject.toml  server.py
(+575 files in other folders)
