[project]
name = "Xmschain_Agent"
version = "0.1.0"
description = "Xmschain_Agent project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "markdownify>=1.1.0",
    "json-repair>=0.7.0",
    "jinja2>=3.1.3",
    "psycopg[binary]>=3.2.9",
    "langgraph>=1.0.5",
    "langchain>=1.2.0",
    "langchain-core>=1.2.2",
    "langchain-mcp-adapters>=0.2.1",
    "mcp>=1.24.0",
    "langchain-openai>=1.1.5",
    "langchain-anthropic>=0.3.1",
    "httpx>=0.28.1",
    "langchain-community>=0.4.1",
    "langgraph-checkpoint-postgres>=3.0.2",
    "fastapi[standard]>=0.125.0",
    "uvicorn>=0.38.0",
    "loguru>=0.7.3",
    "redis>=7.1.0",
    "pandas>=2.3.3",
    "tabulate>=0.9.0",
    "langgraph-checkpoint-mysql>=3.0.0",
    "aiomysql>=0.3.2",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "langgraph-cli[inmem]>=0.2.10",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "asyncpg-stubs>=0.30.2",
    "pytest-postgresql>=7.0.2",
]

[tool.uv]
required-version = ">=0.6.15"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.report]
fail_under = 25

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
extend-include = ["*.pyi"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
exclude = ['^/build/']

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
