[project]
name = "iron-ore-mcp-server"
version = "0.1.0"
description = "复现2 自建 MCP server，桥接 agent 与铁矿石库存预测建模产出"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.24.0",
    "pandas>=2.0.0",
    "uvicorn>=0.38.0",
    "httpx>=0.27.0",
]

[tool.uv]
required-version = ">=0.6.15"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
